Add images folder and update HTML/JS

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <a href="shop.html" class="cta-button">Shop Now</a>
         </div>
         <div class="hero-image">
-            <img src="images/homecc.jpg" alt="Handmade crochet items">
+            <img src="images/croshet.jpg" alt="Handmade crochet items">
         </div>
     </section>
 
