--- a/admin.html
+++ b/admin.html
@@ -58,19 +58,19 @@
                 <div class="sales-grid">
                     <div class="sales-card">
                         <h3>Total Sales</h3>
-                        <p class="sales-number">$2,450.00</p>
+                        <p class="sales-number" id="totalValue">$0.00</p>
                     </div>
                     <div class="sales-card">
                         <h3>Orders</h3>
-                        <p class="sales-number">24</p>
+                        <p class="sales-number" id="totalOrders">0</p>
                     </div>
                     <div class="sales-card">
                         <h3>Products</h3>
-                        <p class="sales-number">6</p>
+                        <p class="sales-number" id="totalProducts">0</p>
                     </div>
                     <div class="sales-card">
                         <h3>Customers</h3>
-                        <p class="sales-number">18</p>
+                        <p class="sales-number" id="totalChatUsers">0</p>
                     </div>
                 </div>
             </div>
@@ -185,4 +185,4 @@
 
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
