--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                 <div class="contact-info">
                     <h2>Get in Touch</h2>
                     <p>Have a question about our products or want to place a custom order? We're here to help!</p>
-                    
+
                     <div class="contact-details">
                         <div class="contact-item">
                             <div class="contact-icon">📧</div>
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="contact-form">
                     <h2>Send us a Message</h2>
                     <form id="contact-form">
@@ -124,6 +124,14 @@
                         <div class="form-group">
                             <label for="email">Email *</label>
                             <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Phone *</label>
+                            <input type="text" id="phone" name="phone" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="country">Country *</label>
+                            <input type="text" id="country" name="country" required>
                         </div>
                         <div class="form-group">
                             <label for="subject">Subject</label>
@@ -179,4 +187,4 @@
 
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
